general update + JS now succesfully runs through quiz

--- a/style.css
+++ b/style.css
@@ -26,3 +26,35 @@ header{
     color: purple;
     text-decoration: none;
 }
+.answers{
+    text-align: center;
+    margin-left:40vw;
+    margin-top: 20px;
+    display: none;
+}
+#possible1,
+#possible2,
+#possible3,
+#possible4{
+border:3px black solid;
+margin:3px;
+padding:5px;
+text-align: center;
+width: fit-content;
+color:white;
+background-color: purple;
+
+}
+.question{
+    color:purple;
+    text-align: center;
+    font-size: 25px;
+    margin:10px;
+   
+}
+.correct{
+    display:none;
+    border-top: purple 2px solid;
+    text-align: center;
+}
+
