--- a/style.css
+++ b/style.css
@@ -57,4 +57,30 @@ background-color: purple;
     border-top: purple 2px solid;
     text-align: center;
 }
+.viewScores{
+    display: none;
+    text-align: center;
+}
+.modal{
+ display:none;
+ z-index: 1;
+ width: 100%;
+ height: 100%;
+ text-align: center;
+}
+.modalContent{
+    margin:20% auto;
+    padding:15px;
+    border:2px solid black;
+    width:60%;
+
+}
+.close{
+float:right;
+}
+.saveScores{
+    display: none;
+    text-align: center;
+    margin: 3px;
+}
 
